--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -2,11 +2,12 @@ header {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 10003;
   width: 100%;
 
   .wrap-header {
     display: flex;
-    padding: 10px 20px;
+    padding: 10px 20px 10px 36px;
   }
 
   h1 {
