--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -4,7 +4,7 @@ header {
   left: 0;
   z-index: 10003;
   width: 100%;
-
+  background: rgba(51,52,112, 0.9);
   .wrap-header {
     display: flex;
     padding: 10px 20px 10px 36px;
