--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
 
 @font-face {
   font-family: 'Material Icons';
@@ -123,4 +123,4 @@ a {
 
 // <a href='https://ru.freepik.com/vectors/certificate'>Certificate вектор создан(а) freepik - ru.freepik.com</a>
 // <a href='https://ru.freepik.com/vectors/school'>School вектор создан(а) pch.vector - ru.freepik.com</a>
-// <a href='https://ru.freepik.com/vectors/business'>Business вектор создан(а) pikisuperstar - ru.freepik.com</a>
+// <a href='https://ru.freepik.com/vectors/business'>Business вектор создан(а) pikisuperstar - ru.freepik.com</a> */
