--- a/src/components/learning/Learning.scss
+++ b/src/components/learning/Learning.scss
@@ -1,11 +1,12 @@
 .learning {
  width: 100%;
  height: auto;
+ padding: 2rem 3rem;
 }
 
 .learning_title {
  background: rgba(255,255,255,0.9);
- padding: 1rem;
+ padding: 0.5rem 1rem;
  border-radius: 15px;
  box-shadow: 0px 0px 10px 0px #000;
  h2 {
@@ -38,7 +39,7 @@
  display: flex;
  justify-content: space-evenly;
  background: rgba(255,255,255,0.85);
- padding: 2rem;
+ padding: 1rem;
  margin-top: 8.5rem;
  border-radius: 15px;
  box-shadow: 0px 0px 10px 0px #000;
@@ -61,7 +62,7 @@
       border: none;
       border: 1px solid #333470;
       border-radius: 10px;
-      font-size: 24px;
+      font-size: 18px;
       color: #333470;
       color: #FFF;
       letter-spacing: 2px;
