--- a/src/components/settings/Settings.scss
+++ b/src/components/settings/Settings.scss
@@ -5,89 +5,41 @@ $white: #fff;
 $green: #06842c;
 
 .settings {
-    position: absolute;
-    top: 0;
-    left: 0;
+  margin-top: 1rem;
     background: #fff;
     width: 100%;
-    height: 100vh;
-    padding: 7rem;
+    padding: 5rem 3rem;
     display: flex;
     justify-content: space-between;
     .settings_main {
        width:50%;
        height: 100%;
+       padding-left: 2rem;
+       h2 {
+        padding-bottom: 2rem;
+       }
       }
     .settings_words {
+      border-left: 2px rgba(0, 0, 0, 0.2) solid;
        width:50%;
        height: 100%;
       }
 }
 
-.settings_main {
- border-right: 2px rgba(0,0,0,0.2) solid;
- h2 {
-  padding-bottom: 2rem;
- }
+
+.sound_switch {
+    display: flex;
+        p {
+          padding-left: 1rem;
+        }
 }
-
-
-.cenchek3 input{
- position:absolute; left:-9999px;
- }
- 
- .cenchek3 label{
- margin:0 15px;
- }
- 
- .cenchek3 {
- margin:10px auto;
- width:300px;
- }
- 
- .sliderce {
-   position: relative; display: block;
-   width: 2em; height: 1em;
-   cursor: pointer;
-   border-radius: 1.5em;
-   transition: 350ms;
-   background: #ddd;
-   float:left;
-   margin:5px 10px 0;
- }
- 
- .sliderce::after {
-   position: absolute; content:'';
-   width: 1rem; height: 1rem;
-   top: 0.1rem; left: 0.2rem;
-   border-radius: 1.5em;
-   transition:
-     width 200ms ease-out,
-     height 300ms 50ms ease-in,
-     top 300ms 50ms ease-in,
-     left 250ms 50ms ease-in,
-     box-shadow 300ms ease-in;
-   background: #333470;
-   box-shadow: 0 0 0 1.5em #f2f2f2 inset;
- }
- 
- input:checked + .sliderce::after {
-   width: 1rem; height: 1rem;
-   top: 0.1rem; left: 1.3rem;
-   box-shadow: 0 0 0 0 #f2f2f2 inset;
- }
- .cek3{
- float:left;
-   input {
-    display: none;
-   }
- }
 
  .count_words {
   display: flex;
      span {
       width:60px;
       text-align: center;
+      align-self: center;
      }
  }
 
@@ -96,6 +48,7 @@ $green: #06842c;
   span {
    width:60px;
    text-align: center;
+   align-self: center;
   }
  }
 
@@ -105,7 +58,7 @@ $green: #06842c;
       background-color: #333470;
       border: none;
       border: 1px solid #333470;
-      border-radius: 50%;
+      border-radius: 30%;
       font-size: 24px;
       color: #333470;
       color: #FFF;
@@ -125,73 +78,31 @@ $green: #06842c;
      }
  }
 
- .settings_words {
+.settings_words {
   padding-left: 2rem;
+}
 
-  .settings_checkbox {
-   display: flex;
-   text-align: center;
-   margin: 0.5rem 0;
+.set_btns {
+  display: flex;
+  flex-direction: column;
+      .checkbox_btns {
+        display: flex;
+  flex-direction: column;
+          label {
+            margin: 0;
+          }
+      }
+}
+
+.set_cards {
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  .checkbox_btns {
+    display: flex;
+flex-direction: column;
+      label {
+        margin: 0;
+      }
   }
-     h2 {
-      padding-bottom: 2rem;
-     }
-
-     input[type="checkbox"] {
-      position: relative;
-      width: 1.5em;
-      height: 1.5em;
-      color: $black;
-      border: 1px solid $gray;
-      border-radius: 4px;
-      appearance: none;
-      outline: 0;
-      cursor: pointer;
-      transition: background 175ms cubic-bezier(0.1, 0.1, 0.25, 1);
-      &::before {
-        position: absolute;
-        content: '';
-        display: block;
-        top: 2px;
-        left: 7px;
-        width: 8px;
-        height: 14px;
-        border-style: solid;
-        border-color: $white;
-        border-width: 0 2px 2px 0;
-        transform: rotate(45deg);
-        opacity: 0;
-      }
-      &:checked {
-        color: $white;
-        border-color: $green;
-        background: $green;
-        &::before {
-          opacity: 1;
-        }
-        ~ label::before {
-          clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-        }
-      }
-    }
-    
-    label {
-      position: relative;
-      cursor: pointer;
-      font-size: 1.5em;
-      font-weight: 600;
-      padding: 0 0.25em 0;
-      user-select: none;
-      &::before {
-       width: 25rem;
-        position: absolute;
-        content: attr(data-content);
-        color: $lightgray;
-        clip-path: polygon(0 0, 0 0, 0% 100%, 0 100%);
-        text-decoration: line-through;
-        text-decoration-thickness: 3px;
-        text-decoration-color: $black;
-        transition: clip-path 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-      }
-    }
- }
+}
