--- a/src/components/savannah_game/Savannah.scss
+++ b/src/components/savannah_game/Savannah.scss
@@ -15,13 +15,14 @@
 .SavannahGame {
  width: 100%;
  height: 100%;
- background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+ background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
    url(../../assets/img/savannah_bg.jpg);
  background-position-x: center;
- background-position-y: 0;
+ background-position-y: 100%;
  padding: 20px;
  display:flex;
  flex-direction: column;
  justify-content:center;
  align-items:center;
+ transition: 1s all;
 }
