--- a/src/components/savannah_game/SavannahGame.scss
+++ b/src/components/savannah_game/SavannahGame.scss
@@ -1,7 +1,7 @@
 .savannah_word { 
  position: absolute;
- left: 50%;
- transition: 8s ease all;
+ left: 48%;
+ transition: 12s ease all;
  color: #fff;
  font-size: 2.5rem;
  -webkit-text-stroke: 1px black;
@@ -9,17 +9,84 @@
 
 .savannah_progress {
  position: absolute;
- top: 35rem;
- width:60%;
+ top: 61%;
+ width:40%;
+ .ant-progress-show-info .ant-progress-outer {
+      padding-right: 0; 
+  }
+  .ant-progress-text {
+      display: none;
+  }
 }
 
 .choose_word_btn {
  position: absolute;
- top: 30rem;
+ top: 50%;
  display: flex;
  justify-content: center;
  width: 30%;
       button {
        margin: 0 1rem;
+            span {
+                  font-weight: 900;
+            }
       }
+}
+.savannah_sound_switch {
+      position: absolute;
+      top: 5rem;
+      left: 12rem;
+      display: flex;
+            button {
+                  margin-left: 1rem;
+                  align-self: center;
+            }
+}
+
+.savannah_lifes { 
+position: absolute;
+top: 5rem;
+right: 2rem;
+      img {
+            width:32px;
+            margin: 3px;
+      }
+}
+
+@keyframes sun {
+      100% {
+            transform: rotate(360deg);
+          }
+}
+
+
+@keyframes tree {
+      0% {
+            transform: scale(1.2);
+          }
+      50% {
+            transform: scale(1);
+          }
+      100% {
+            transform: scale(1.2);
+          }
+}
+      
+.savannah_icon_tree {
+    position: absolute;
+    bottom: 1rem;
+    left: 50%;
+    width: 8rem;
+    transform: scale(1.2);
+}
+
+.savannah_icon_sun {
+    position: absolute;
+    bottom: 5rem;
+    left: 40%;
+    animation: sun 7s infinite linear;
+}
+#Capa_1:hover {
+      cursor: pointer;
+      fill: #1890ff;
 }
