--- a/src/components/words/Words.scss
+++ b/src/components/words/Words.scss
@@ -1,9 +1,11 @@
 .words {
   padding: 50px;
+  padding-top: 0;
 
   h3 {
     padding: 30px;
     text-align: center;
+    color: #001529;
     text-transform: uppercase;
   }
 }
