--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -1,4 +1,4 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
 
 @font-face {
   font-family: 'Material Icons';
@@ -22,7 +22,7 @@
   -webkit-font-feature-settings: 'liga';
   -webkit-font-smoothing: antialiased;
 }
-
+/*
 body {
   font-family: 'Poiret One', cursive;
   font-size: 20px;
