--- a/src/components/learning/Learning.scss
+++ b/src/components/learning/Learning.scss
@@ -1,7 +1,7 @@
 .learning {
  width: 100%;
  height: auto;
- padding: 2rem 3rem;
+ padding: 1rem 3rem;
 
  .learning-categories {
    padding: 20px 0;
@@ -13,8 +13,17 @@
  padding: 0.5rem 1rem;
  border-radius: 15px;
  box-shadow: 0px 0px 10px 0px #000;
+
+ font-family: 'Poiret One', cursive;
+ font-size: 20px;
+
  h2 {
   font-weight: 900;
+ }
+
+ p {
+   font-weight: bold;
+   text-align: justify;
  }
 }
 
