--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -124,11 +124,11 @@ a {
 // <a href='https://ru.freepik.com/vectors/certificate'>Certificate вектор создан(а) freepik - ru.freepik.com</a>
 // <a href='https://ru.freepik.com/vectors/school'>School вектор создан(а) pch.vector - ru.freepik.com</a>
 // <a href='https://ru.freepik.com/vectors/business'>Business вектор создан(а) pikisuperstar - ru.freepik.com</a> */
-
+// <a href='https://ru.freepik.com/vectors/business'>Business вектор создан(а) stories - ru.freepik.com</a>
+// <a href='https://ru.freepik.com/vectors/background'>Background вектор создан(а) freepik - ru.freepik.com</a>
 aside,
 .ant-layout-sider-children,
 .ant-layout-sider-children ul {
   position: fixed;
   height: 100vh;
-
 }
