--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -1,4 +1,24 @@
+.ant-layout-footer {
+  padding: 20px 10px;
+}
+
 .footer_logo {
-    width:100px;
-    height: 90%;
+  width:60px;
+  height: 90%;
+}
+
+a.ant-typography,
+.ant-typography a {
+  color: #314963;
+}
+
+a.ant-typography:hover,
+.ant-typography a:hover {
+  color: #df168b;
+}
+
+h2.ant-typography,
+.ant-typography h2 {
+  font-size: 16px;
+  color: #314963;
 }
