--- a/src/components/team/Team.scss
+++ b/src/components/team/Team.scss
@@ -51,16 +51,37 @@
 
   .position {
     font-family: 'Poiret One', cursive;
-    font-size: 20px;
+    font-size: 22px;
     text-align: center;
     font-weight: bold;
     color: #001529;
   }
 
   .description {
-    padding: 0 10px;
+    padding: 0 20px;
+    font-family: 'Poiret One', cursive;
+    font-size: 22px;
+    color: #314963;
+    text-align: center;
+  }
+
+  .title-description-work {
     font-family: 'Poiret One', cursive;
     font-size: 20px;
+    padding: 0 20px;
+    font-weight: bold;
+    text-transform: uppercase;
     text-align: center;
+
+    span {
+      padding-bottom: 10px;
+      border-bottom: 1px solid #DDD;
+    }
+  }
+
+  .description-work {
+    font-family: 'Poiret One', cursive;
+    font-size: 20px;
+    padding: 0 20px;
   }
 }
