--- a/src/components/our_game/Ourgame.scss
+++ b/src/components/our_game/Ourgame.scss
@@ -22,7 +22,7 @@
  padding: 20px;
  display:flex;
  flex-direction: column;
- justify-content:center;
+ // justify-content:center;
  align-items:center;
  transition: 1s all;
  user-select: none;
