--- a/src/components/words/Words.scss
+++ b/src/components/words/Words.scss
@@ -3,7 +3,7 @@
   padding-top: 0;
 
   h3 {
-    padding: 30px;
+    padding: 0 30px;
     text-align: center;
     color: #001529;
     text-transform: uppercase;
