--- a/src/components/our_game/OurgameGame.scss
+++ b/src/components/our_game/OurgameGame.scss
@@ -1,8 +1,10 @@
 .ourgame_word_contain {
- position: absolute;
-    top: 26%;
-    left: calc((100% - 370px) / 2);
+ // position: absolute;
+ //    top: 26%;
+ //    left: calc((100% - 370px) / 2);
   width: 450px;
+  padding-top: 100px;
+  text-align: center;
    p {
     color: #fff;
     font-size: 1.2rem;
@@ -10,7 +12,7 @@
    }
 }
 
-.ourgame_word { 
+.ourgame_word {
  color: #fff;
  font-size: 2.5rem;
  -webkit-text-stroke: 1px black;
@@ -19,11 +21,11 @@
 }
 
 .ourgame_progress {
- position: absolute;
- top: 45%;
+ // position: absolute;
+ // top: 45%;
  width:40%;
  .ant-progress-show-info .ant-progress-outer {
-      padding-right: 0; 
+      padding-right: 0;
   }
   .ant-progress-text {
       display: none;
@@ -31,8 +33,8 @@
 }
 
 .choose_image_btn {
- position: absolute;
- top: 50%;
+ // position: absolute;
+ // top: 50%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
@@ -60,7 +62,7 @@
             }
 }
 
-.ourgame_lifes { 
+.ourgame_lifes {
 position: absolute;
 top: 5rem;
 right: 2rem;
