--- a/src/components/words/Words.scss
+++ b/src/components/words/Words.scss
@@ -9,3 +9,20 @@
     text-transform: uppercase;
   }
 }
+
+@media screen and (max-width: 720px) {
+  .words {
+    padding: 20px;
+  }
+}
+
+@media screen and (max-width: 660px) {
+  .words {
+    padding: 0;
+
+    h3 {
+      padding: 0;
+      font-size: 16px;
+    }
+  }
+}
