--- a/src/components/audiocall/AudioCall.scss
+++ b/src/components/audiocall/AudioCall.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url(https://s2.best-wallpaper.net/wallpaper/1920x1080/1711/Headphones-yellow-background_1920x1080.jpg);
+    url(../../assets/img/bg_audiocall.jpg);
   padding: 20px;
   display:flex;
   flex-direction: column;
@@ -14,7 +14,7 @@
   width: 100%;
   height: 100%;
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url(https://s2.best-wallpaper.net/wallpaper/1920x1080/1711/Headphones-yellow-background_1920x1080.jpg);
+    url(../../assets/img/bg_audiocall.jpg);
   padding: 20px;
   display:flex;
   flex-direction: column;
