--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -13,7 +13,8 @@ h1.ant-typography {
   display: block;
   padding: 5px;
   border-radius: 50%;
-  background-color: #f4af4a;
+  // background-color: #f4af4a;
+  background-color: #932a2f;
   display: flex;
   justify-content: center;
   align-items: center;
