--- a/src/components/learning/Learning.scss
+++ b/src/components/learning/Learning.scss
@@ -10,17 +10,16 @@
 
 .learning_header {
   padding: 10px 20px;
-  font-family: 'Poiret One', cursive;
-  font-size: 20px;
 
   h2 {
+    font-family: 'Poiret One', cursive;
     font-size: 30px;
     font-weight: bold;
   }
 
   p {
     font-size: 20px;
-    font-weight: bold;
+    font-weight: normal;
     text-align: justify;
   }
 }
