--- a/src/components/our_game/Ourgame.scss
+++ b/src/components/our_game/Ourgame.scss
@@ -10,6 +10,22 @@
  flex-direction: column;
  justify-content:center;
  align-items:center;
+
+ h2.ant-typography {
+   font-family: 'Poiret One', cursive;
+   font-size: 30px;
+   letter-spacing: 3px;
+   text-transform: uppercase;
+ }
+
+ h3.ant-typography {
+   text-align: center;
+ }
+
+ div.ant-typography {
+   font-size: 16px;
+   text-align: center;
+ }
 }
 
 .OurgameGame {
@@ -26,4 +42,25 @@
  align-items:center;
  transition: 1s all;
  user-select: none;
+}
+
+.OurgameGame > div:first-child {
+  min-height: 161px;
+}
+
+@media screen and (max-width: 550px) {
+  .OurgameGame > div:first-child {
+    min-height: 211px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .Ourgame {
+    h2.ant-typography {
+      font-size: 24px;
+    }
+    h3.ant-typography {
+      font-size: 20px;
+    }
+  }
 }
