--- a/src/components/category/Category.scss
+++ b/src/components/category/Category.scss
@@ -18,7 +18,11 @@
         align-items: flex-end;
 
         p {
-          font-size: 16px;
+          // font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+          // font-size: 16px;
+          // font-weight: normal;
+          // letter-spacing: 1px;
+          // text-transform: lowercase;
         }
     }
 
@@ -36,6 +40,10 @@
 
       &:hover {
         transform: translateY(20px);
+
+        p {
+          // letter-spacing: 1px;
+        }
       }
     }
 
@@ -53,6 +61,9 @@
   }
 
   h2 {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
     width: 80%;
     padding: 20px;
     margin-bottom: 20px;
@@ -61,11 +72,23 @@
     font-size: 20px;
     font-weight: bold;
     color:  #FFF;
-    text-align: center;
     letter-spacing: 3px;
     text-transform: uppercase;
     position: relative;
     z-index: 2;
+
+    button {
+      display: flex;
+      align-items: center;
+      border-radius: 10px;
+      padding: 10px 20px;
+      box-shadow: 0 0 6px #FFF;
+      font-size: 20px;
+    }
+
+    button:hover {
+      box-shadow: 2px 2px 2px #FFF;
+    }
   }
 }
 
@@ -142,10 +165,8 @@
     display: block;
     padding: 5px;
     margin: auto;
-    // background-color: #333470;
     background-color: #001529;
     border: none;
-    // border: 1px solid #333470;
     border: 1px solid #001529;
     border-radius: 10px;
     font-size: 14px;
@@ -157,7 +178,6 @@
 
   button:hover {
     background-color: #FFF;
-    // color: #333470;
     color: #000;
   }
 
@@ -209,7 +229,6 @@
     padding: 5px;
     display: flex;
     flex-direction: row;
-    // background-color: #333470;
     background-color: #001529;
 
     button {
@@ -222,6 +241,22 @@
   position: relative;
   left: -50px;
   color: transparent;
+}
+
+@media screen and (max-width: 1250px) {
+  .list-word {
+    h2 {
+      width: 95%;
+    }
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .list-word {
+    .wrap-words-item p {
+      font-size: 16px;
+    }
+  }
 }
 
 @media screen and (max-width: 1050px) {
@@ -244,6 +279,15 @@
     p {
       padding-left: 20px;
       text-align: left;
+    }
+  }
+}
+
+
+@media screen and (max-width: 1000px) {
+  .list-word {
+    .wrap-words-item > div {
+        margin-right: 5px;
     }
   }
 }
@@ -272,7 +316,52 @@
   .wrap-list-word .button-sound {
     width: 20%;
   }
+}
 
+@media screen and (max-width: 930px) {
+  .list-word {
+    .wrap-words-item > div {
+        margin-right: 2px;
+    }
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .list-word {
+    .wrap-words-item > div {
+        margin-right: 0;
+    }
+  }
+}
+
+@media screen and (max-width: 890px) {
+  .list-word {
+    .wrap-words-item {
+      p {
+        font-size: 14px;
+        padding-bottom: 5px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .list-word {
+    h2 {
+      font-size: 20px;
+    }
+  }
+}
+
+@media screen and (max-width: 780px) {
+  .list-word {
+
+    .wrap-words-item {
+      p {
+        text-transform: lowercase;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 750px) {
@@ -295,11 +384,73 @@
   }
 }
 
+@media screen and (max-width: 730px) {
+  .list-word {
+    h2 {
+      width: 98%;
+    }
+  }
+}
+
+@media screen and (max-width: 705px) {
+  .list-word {
+    h2 {
+      font-size: 16px;
+    }
+  }
+  .list-word .navigation-categories .wrap-words-item {
+    padding: 10px 0;
+  }
+  .list-word .navigation-categories .wrap-words-item > div {
+    width: 130px;
+    margin-bottom: 10px;
+    border-radius: 20px;
+    position: static;
+    transform: translateY(0);
+
+    &:hover {
+      transform: translateY(-5px);
+    }
+  }
+
+  .list-word .navigation-categories .wrap-words-item > div:last-child {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (max-width: 655px) {
+  .list-word {
+    .wrap-words-item {
+      p {
+        letter-spacing: 1px;
+      }
+      .item:hover p {
+        letter-spacing: 1px;
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 650px) {
   .wrap-list-word {
     .wrap-img {
       width: 200px;
     }
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .list-word {
+    h2 {
+      flex-direction: column;
+      text-align: center;
+    }
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .ant-pagination-next {
+    display: none;
   }
 }
 
@@ -312,5 +463,21 @@
 }
 
 @media screen and (max-width: 450px) {
-  
+  .wrap-list-word .item {
+    width: 90%;
+  }
+  .wrap-list-word .word-header {
+    flex-direction: column;
+
+    .col-left,
+    .col-right {
+      width: 90%;
+      margin: auto;
+    }
+  }
+
+  .wrap-list-word .wrap-img {
+    width: auto;
+    text-align: center;
+  }
 }
