--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -1,22 +1,20 @@
 .wrap-home {
  display: flex;
+ height: 80vh;
  font-family: 'Poiret One', cursive;
  font-size: 20px;
- // background: url(../../assets/img/bg.jpg) no-repeat left center;
- // background-size: 56%;
-
-  .col-left {
-   width: 60%;
-  }
+ background: url(../../assets/img/promo.jpg) no-repeat left center #EDEDED;
 
 .col-right {
- width: 40%;
+ width: 100%;
  padding-right: 50px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
+ align-items: flex-end;
 
  .description {
+   width: 60%;
    padding: 50px 0;
    font-size: 30px;
    line-height: 1.3;
@@ -59,27 +57,23 @@
 
 @media screen and (max-width: 1000px) {
   .wrap-home {
-
-    .col-left {
-      width: 50%;
-    }
-
     .col-right {
-      width: 50%;
+      .description {
+        width: 50%;
+      }
     }
   }
 }
 
 @media screen and (max-width: 900px) {
   .wrap-home {
+    height: auto;
+    padding-bottom: 400px;
+    background: url(../../assets/img/promo.jpg) no-repeat left bottom #EDEDED;
 
-    .col-left {
-      width: 0;
-    }
-
-    .col-right {
+    .col-right .description {
       width: 90%;
-      margin: auto;
+      margin: 0 auto;
       padding-right: 0;
     }
   }
@@ -87,6 +81,9 @@
 
 @media screen and (max-width: 700px) {
   .wrap-home {
+    padding-bottom: 400px;
+    background: url(../../assets/img/promo.jpg) no-repeat center bottom #EDEDED;
+    background-size: 65%;
 
     .col-right {
 
@@ -95,6 +92,20 @@
         font-size: 26px;
       }
     }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .wrap-home {
+    padding-bottom: 250px;
+    background-size: 45%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .wrap-home {
+    padding-bottom: 200px;
+    background-size: 40%;
   }
 }
 
