--- a/src/components/savannah_game/Savannah.scss
+++ b/src/components/savannah_game/Savannah.scss
@@ -10,6 +10,22 @@
  flex-direction: column;
  justify-content:center;
  align-items:center;
+
+ h2.ant-typography {
+   font-family: 'Poiret One', cursive;
+   font-size: 30px;
+   letter-spacing: 3px;
+   text-transform: uppercase;
+ }
+
+ h3.ant-typography {
+   text-align: center;
+ }
+
+ div.ant-typography {
+   font-size: 16px;
+   text-align: center;
+ }
 }
 
 .SavannahGame {
@@ -26,4 +42,16 @@
  align-items:center;
  transition: 1s all;
  user-select: none;
+}
+
+
+@media screen and (max-width: 400px) {
+  .Savannah {
+    h2.ant-typography {
+      font-size: 24px;
+    }
+    h3.ant-typography {
+      font-size: 20px;
+    }
+  }
 }
