--- a/src/components/team/Team.scss
+++ b/src/components/team/Team.scss
@@ -60,8 +60,7 @@
 
   .description {
     padding: 0 20px;
-    font-family: 'Poiret One', cursive;
-    font-size: 22px;
+    font-size: 18px;
     color: #314963;
     text-align: center;
   }
@@ -81,9 +80,9 @@
   }
 
   .description-work {
-    font-family: 'Poiret One', cursive;
-    font-size: 20px;
     padding: 0 20px;
+    font-size: 18px;
+    text-align: center;
   }
 }
 
