--- a/src/components/card_textbook/CardTextBook.scss
+++ b/src/components/card_textbook/CardTextBook.scss
@@ -56,6 +56,25 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: left;
+    .count {
+      display: flex;
+      width: 20%;
+      justify-content: space-between;
+      color: #fff;
+      font-size: 16px;
+      .successfully {
+        width: 40%;
+        text-align: center;
+        border-radius: 15px;
+        background-color: rgb(0, 87, 12);
+      }
+      .unsuccessfully {
+        width: 40%;
+        text-align: center;
+        border-radius: 15px;
+        background-color: rgb(219, 0, 0);
+      }
+    }
     .group {
       margin: 0;
       padding: 0;
@@ -94,6 +113,25 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: left;
+    .count {
+      display: flex;
+      width: 20%;
+      justify-content: space-between;
+      color: #fff;
+      font-size: 16px;
+      .successfully {
+        width: 40%;
+        text-align: center;
+        border-radius: 15px;
+        background-color: rgb(0, 87, 12);
+      }
+      .unsuccessfully {
+        width: 40%;
+        text-align: center;
+        border-radius: 15px;
+        background-color: rgb(219, 0, 0);
+      }
+    }
     .group {
       margin: 0;
       padding: 0;
